fix: wrong overlap order when drag into deck button

--- a/src/component/deck/deck-beacon.scss
+++ b/src/component/deck/deck-beacon.scss
@@ -13,11 +13,13 @@
         border-color: transparent;
         background: #e1e1e1ff;
         color: #ffffff;
-        visibility: visible;
     }
 }
 .deck-beacon-wrapper {
     &.available-to-drop {
+        .deck-back-beacon-list {
+            z-index: 1;
+        }
         .deck-beacon {
             visibility: visible;
             &.ready-to-drop {
