--- a/src/component/deck/deck-button.scss
+++ b/src/component/deck/deck-button.scss
@@ -23,3 +23,6 @@
         }
     }
 }
+.deck-back-beacon-suppress {
+    z-index: 0 !important;
+}
